# gi

./: GEMINI.md  README.md  pyproject.toml
src/gi/: __init__.py  main.py
src/gi_cli/: __init__.py  main.py
