[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gi-cli"
version = "0.1.0"
description = "A CLI tool that prints a ghost joke."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gi = "gi_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
